# gnn-poisoning

./: .gitignore  dataset.py  main.py  model.py  poison.py  pyproject.toml  train.py
configs/: amazon_computers-degree_flipping.config  amazon_computers-label_flipping.config  amazon_computers-lafak.config  amazon_computers-mg.config  amazon_computers-no_attack.config  example.config
src/: dataset.py  main.py  poison.py  train.py  utils.py
tools/: REMOTE_GUIDE.md  remote.sh
