[project]
name = "poisoning-attacks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "configargparse>=1.7.1",
    "scipy>=1.17.0",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "torch-scatter>=2.1.2",
    "wandb>=0.21.0",
]
